--- a/index.html
+++ b/index.html
@@ -10,12 +10,35 @@
 <body background="header.jpg" style="font-family: Montserrat">
 	<div class="container">
 		<h1>Don't miss a thing!</h1>
+		<!--
 		<form>
 			Complete name<br><input type="text" name="Name" style="margin-bottom: 10px"><br>
 			Email<br><input type="email" name="email" style="margin-bottom: 10px"><br>
 			Confirm your email<br><input type="email" name="confirm email"><br>
-			<button class="primary">Subscribe!</button>
-		</form>
+		</form>-->
+
+						<!-- Begin Mailchimp Signup Form -->
+				<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+				<style type="text/css">
+					#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
+					/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+					   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+				</style>
+				<div id="mc_embed_signup">
+				<form action="https://gmail.us3.list-manage.com/subscribe/post?u=0364667b064678d43ef2c77c8&amp;id=99135ec62c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+				    <div id="mc_embed_signup_scroll">
+				    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+				    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+				    	<input type="text" name="b_0364667b064678d43ef2c77c8_99135ec62c" tabindex="-1" value="">
+				    </div>
+				    <div class="clear">
+				    	<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="primary">
+				    </div>
+				    </div>
+				</form>
+				</div>
+
+				<!--End mc_embed_signup-->
 		
 	</div>
 </body>
