--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					    	<input type="text" name="b_0364667b064678d43ef2c77c8_99135ec62c" tabindex="-1" value="">
 					    </div>
 					    <div class="clear">
-					    	<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="primary">
+					    	<input type="submit" value="Subscribe" name="subscribe" class="primary">
 					    </div>
 					    </div>
 					</form>
