--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 				<div id="mc_embed_signup">
 					<form action="https://gmail.us3.list-manage.com/subscribe/post?u=0364667b064678d43ef2c77c8&amp;id=99135ec62c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 					    <div id="mc_embed_signup_scroll">
-					    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-					    <div style="position: absolute; left: -5000px;" aria-hidden="true">
-					    	<input type="text" name="b_0364667b064678d43ef2c77c8_99135ec62c" tabindex="-1" value="">
-					    </div>
-					    <div class="container">
-					    	<input type="submit" value="Subscribe" name="subscribe" class="primary">
-					    </div>
+						    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+						    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+						    	<input type="text" name="b_0364667b064678d43ef2c77c8_99135ec62c" tabindex="-1" value="">
+						    </div>
+						    <div style="position: relative;">
+						    	<input type="submit" value="Subscribe" name="subscribe" class="primary">
+						    </div>
 					    </div>
 					</form>
 				</div>
