--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		Startup of your life
 	</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-	<link rel="stylesheet" href="startup.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body background="header.jpg" style="font-family: Montserrat">
 	<div class="container">
@@ -31,7 +31,7 @@
 						    <div style="position: absolute; left: -5000px;" aria-hidden="true">
 						    	<input type="text" name="b_0364667b064678d43ef2c77c8_99135ec62c" tabindex="-1" value="">
 						    </div>
-						    <div style="position: absolute;">
+						    <div style="position: relative;">
 						    	<input type="submit" value="Subscribe" name="subscribe" class="primary">
 						    </div>
 					    </div>
