--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				    <div style="position: absolute; left: -5000px;" aria-hidden="true">
 				    	<input type="text" name="b_0364667b064678d43ef2c77c8_99135ec62c" tabindex="-1" value="">
 				    </div>
-				    <div style="text-align: center;">
+				    <div style="text-align: center; position: relative;">
 				    	<input type="submit" value="Subscribe" name="subscribe" class="primary">
 				    </div>
 			    </div>
